# SoundBoard

./: .gitignore  CMakeLists.txt  README.md  items.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
cmake/: QHotkeyConfig.cmake.in
model/: audiomixer.cpp  audiomixer.h  filehandler.cpp  filehandler.h  hotkeymanager.cpp  hotkeymanager.h  item.cpp  item.h  itemdelegate.cpp  itemdelegate.h  keybinddialog.cpp  keybinddialog.h  sounditemwidget.cpp  sounditemwidget.h  viewmodel.cpp  viewmodel.h
